--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	<meta charset="utf-8">
 </head>
 <body>
-	<a href="battery/index.html">battary</a>
+	<a href="my_first_page/index.html">first</a>
 </body>
 </html>
