--- a/index.html
+++ b/index.html
@@ -1,10 +1,43 @@
 <!DOCTYPE html>
 <html lang="uk-ua">
 <head>
-	<title>Zaleim</title>
+	<title>zaleim_WOWTeachers</title>
 	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<a href="my_first_page/index.html">first</a>
+	<div class="fullwrap"> 
+		<header>
+			<div class="wow"><p>wow theacher homework</p></div>
+		</header>
+		<main>
+			<ul class="lesson">
+				<li><span class="num">lesson_1</span>
+					<ul>
+						<li><a href="#">text</a></li>
+					</ul>
+				</li>
+				<li><span class="num">lesson_2</span>
+					<ul>
+						<li><a href="#">text</a></li>
+					</ul>
+				</li>
+				<li><span class="num">lesson_3</span>
+					<ul>
+						<li><a href="#">text</a></li>
+						<li><a href="#">text</a></li>
+					</ul>
+				</li>
+				<li><span class="num">lesson_4</span>
+					<ul>
+						<li><a href="#">text</a></li>		
+						<li><a href="#">text</a></li>
+					</ul>
+				</li>
+				<li><span class="num">lesson_5</span></li>
+				
+			</ul>
+		</main>
+	</div>
 </body>
 </html>
