--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="fullwrap"> 
 		<header>
-			<div class="wow"><p>wow theacher homework</p></div>
+			<div class="wow"><p>wow theachers homework</p></div>
 		</header>
 		<main>
 			<ul class="lesson">
@@ -20,10 +20,14 @@
 				<li><span class="num">lesson_2</span>
 					<ul>
 						<li><a href="#">text</a></li>
+						<li><a href="#">text</a></li>
+						<li><a href="#">text</a></li>
 					</ul>
 				</li>
 				<li><span class="num">lesson_3</span>
 					<ul>
+						<li><a href="#">text</a></li>
+						<li><a href="#">text</a></li>
 						<li><a href="#">text</a></li>
 						<li><a href="#">text</a></li>
 					</ul>
@@ -38,6 +42,9 @@
 				
 			</ul>
 		</main>
+		<footer>
+			<div>ZaLeiM</div>
+		</footer>
 	</div>
 </body>
 </html>
