--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<ul class="lesson">
 				<li><span class="num">lesson_1</span>
 					<ul>
-						<li><a href="#">text</a></li>
+						<li><a href="task_1/index.html">task_1</a></li>
 					</ul>
 				</li>
 				<li><span class="num">lesson_2</span>
