--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
 				</li>
 				<li><span class="num">lesson_2</span>
 					<ul>
-						<li><a href="#">text</a></li>
-						<li><a href="#">text</a></li>
-						<li><a href="#">text</a></li>
+						<li><a href="vacavciia/index.html">task_1</a></li>
+						<li><a href="menu/index.html">task_2</a></li>
 					</ul>
 				</li>
 				<li><span class="num">lesson_3</span>
