--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 				</li>
 				<li><span class="num">lesson_3</span>
 					<ul>
-						<li><a href="#">text</a></li>
-						<li><a href="#">text</a></li>
-						<li><a href="#">text</a></li>
-						<li><a href="#">text</a></li>
+						<li><a href="task3_1_2_3/index.html">task_1_2_3</a></li>
+						<li><a href="task3_4/index.html">task_4</a></li>
+						<li><a href="task3_4_2/index4_2.html">task4_2</a></li>
+						<li><a href="#">task5</a></li>
 					</ul>
 				</li>
 				<li><span class="num">lesson_4</span>
