--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 				</li>
 				<li><span class="num">lesson_4</span>
 					<ul>
-						<li><a href="#">text</a></li>		
-						<li><a href="#">text</a></li>
+						<li><a href="rozetka4_task_1/index.html">task_1</a></li>
+						<li><a href="title_task_2/title.html">task_2</a></li>
+						<li><a href="battery_task_3/index.html">task_3</a></li>
 					</ul>
 				</li>
 				<li><span class="num">lesson_5</span></li>
