--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
 						<li><a href="battery_task_3/index.html">task_3</a></li>
 					</ul>
 				</li>
-				<li><span class="num">lesson_5</span></li>
+				<li><span class="num">lesson_5</span>
+					<ul>
+						<li><a href="task_5_1/index.html">task_1</a></li>
+						<li><a href="task_5_2/cossacs.html">task_2</a></li>
+						<li><a href="task_5_3/index.html">task_3</a></li>
+					</ul>
+				</li>
 				
 			</ul>
 		</main>
