--- a/index.html
+++ b/index.html
@@ -45,7 +45,41 @@
 						<li><a href="task_5_3/index.html">task_3</a></li>
 					</ul>
 				</li>
-				
+				<li><span class="num">lesson_6</span>
+					<ul>
+						<li><a href="#">task_1</a></li>
+						<li><a href="#">task_2</a></li>
+						<li><a href="#">task_3</a></li>
+					</ul>
+				</li>
+				<li><span class="num">lesson_7</span>
+					<ul>
+						<li><a href="#">task_1</a></li>
+						<li><a href="#">task_2</a></li>
+						<li><a href="#">task_3</a></li>
+					</ul>
+				</li>
+				<li><span class="num">lesson_8</span>
+					<ul>
+						<li><a href="#">task_1</a></li>
+						<li><a href="#">task_2</a></li>
+						<li><a href="#">task_3</a></li>
+					</ul>
+				</li>
+				<li><span class="num">lesson_9</span>
+					<ul>
+						<li><a href="#">task_1</a></li>
+						<li><a href="#">task_2</a></li>
+						<li><a href="#">task_3</a></li>
+					</ul>
+				</li>
+				<li><span class="num">lesson_10</span>
+					<ul>
+						<li><a href="#">task_1</a></li>
+						<li><a href="#">task_2</a></li>
+						<li><a href="#">task_3</a></li>
+					</ul>
+				</li>
 			</ul>
 		</main>
 		<footer class="footer">
