--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<li><a href="task_5_3/index.html">task_3</a></li>
 					</ul>
 				</li>
-				<li><span class="num">lesson_6</span>
+<!-- 				<li><span class="num">lesson_6</span>
 					<ul>
 						<li><a href="#">task_1</a></li>
 						<li><a href="#">task_2</a></li>
@@ -65,21 +65,7 @@
 						<li><a href="#">task_2</a></li>
 						<li><a href="#">task_3</a></li>
 					</ul>
-				</li>
-				<li><span class="num">lesson_9</span>
-					<ul>
-						<li><a href="#">task_1</a></li>
-						<li><a href="#">task_2</a></li>
-						<li><a href="#">task_3</a></li>
-					</ul>
-				</li>
-				<li><span class="num">lesson_10</span>
-					<ul>
-						<li><a href="#">task_1</a></li>
-						<li><a href="#">task_2</a></li>
-						<li><a href="#">task_3</a></li>
-					</ul>
-				</li>
+				</li> -->
 			</ul>
 		</main>
 		<footer class="footer">
