--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
 						<li><a href="task3_1_2_3/index.html">task_1_2_3</a></li>
 						<li><a href="task3_4/index.html">task_4</a></li>
 						<li><a href="task3_4_2/index4_2.html">task4_2</a></li>
-						<li><a href="rozetka_3/index.html">task5</a></li>
+						/*<li><a href="rozetka_3/index.html">task5</a></li>*/
 					</ul>
 				</li>
 				<li><span class="num">lesson_4</span>
 					<ul>
-						<li><a href="rozetka4_task_1/index.html">task_1</a></li>
+						/*<li><a href="rozetka4_task_1/index.html">task_1</a></li>*/
 						<li><a href="title_task_2/title.html">task_2</a></li>
 						<li><a href="battery_task_3/index.html">task_3</a></li>
 					</ul>
