--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				</li>
 				<li><span class="num">lesson_4</span>
 					<ul>
-						<li><a href="rozetka_4_task_1/index.html">task_1</a></li>
+						/*<li><a href="rozetka_4_task_1/index.html">task_1</a></li>*/
 						<li><a href="title_task_2/title.html">task_2</a></li>
 						<li><a href="battery_task_3/index.html">task_3</a></li>
 					</ul>
