--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 						<li><a href="task_5_1/index.html">task_1</a></li>
 						<li><a href="task_5_2/cossacs.html">task_2</a></li>
 						<li><a href="task_5_3/index.html">task_3</a></li>
+						<li><a href="VPS/index.html">task_4</a></li>
 					</ul>
 				</li>
 <!-- 				<li><span class="num">lesson_6</span>
