--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 						<li><a href="VPS/index.html">task_4</a></li>
 					</ul>
 				</li>
-<!-- 				<li><span class="num">lesson_6</span>
+ 				<li><span class="num">lesson_6</span>
 					<ul>
-						<li><a href="#">task_1</a></li>
-						<li><a href="#">task_2</a></li>
-						<li><a href="#">task_3</a></li>
+						<li><a href="task_6_1/index.html">task_1</a></li>
+						<li><a href="task_6_2/index.html">task_2</a></li>
+						
 					</ul>
 				</li>
-				<li><span class="num">lesson_7</span>
+				<!--<li><span class="num">lesson_7</span>
 					<ul>
 						<li><a href="#">task_1</a></li>
 						<li><a href="#">task_2</a></li>
