--- a/task_6_1/index.html
+++ b/task_6_1/index.html
@@ -11,23 +11,31 @@
 			<div class="header">Casio 3234</div>
 			<input type="" name="" value="лоррпапр">
 			<div class="battery"></div>
-			<div class="buttons clearfix">
-				<div class="button">7</div>
-				<div class="button">8</div>
-				<div class="button">9</div>
-				<div class="button">+</div>
-				<div class="button">4</div>
-				<div class="button">5</div>
-				<div class="button">6</div>
-				<div class="button">-</div>
-				<div class="button">1</div>
-				<div class="button">2</div>
-				<div class="button">3</div>
-				<div class="button">/</div>
-				<div class="button">,</div>
-				<div class="button">0</div>
-				<div class="button">=</div>
-				<div class="button">*</div>
+			<div class="buttons">
+				<div class="row">
+					<div class="button one">7</div>
+					<div class="button two">8</div>
+					<div class="button three">9</div>
+					<div class="button four">+</div>
+				</div>
+				<div class="row">
+					<div class="button one">4</div>
+					<div class="button two">5</div>
+					<div class="button three">6</div>
+					<div class="button four">-</div>
+				</div>
+				<div class="row">
+					<div class="button one">1</div>
+					<div class="button two">2</div>
+					<div class="button three">3</div>
+					<div class="button four">/</div>
+				</div>
+				<div class="row">
+					<div class="button one">,</div>
+					<div class="button two">0</div>
+					<div class="button three">=</div>
+					<div class="button four">*</div>
+				</div>
 			</div>
 		</div>
 	</div>
