--- a/index.html
+++ b/index.html
@@ -53,14 +53,13 @@
 						
 					</ul>
 				</li>
-				<!--<li><span class="num">lesson_7</span>
+				<li><span class="num">lesson_7</span>
 					<ul>
-						<li><a href="#">task_1</a></li>
-						<li><a href="#">task_2</a></li>
-						<li><a href="#">task_3</a></li>
+						<li><a href="task_7_1/index.html">task_1</a></li>
+						<li><a href="task_7_2/index.html">task_2</a></li>
 					</ul>
 				</li>
-				<li><span class="num">lesson_8</span>
+				<!--<li><span class="num">lesson_8</span>
 					<ul>
 						<li><a href="#">task_1</a></li>
 						<li><a href="#">task_2</a></li>
