--- a/index.html
+++ b/index.html
@@ -59,7 +59,24 @@
 						<li><a href="task_7_2/index.html">task_2</a></li>
 					</ul>
 				</li>
-				<!--<li><span class="num">lesson_8</span>
+				<li><span class="num">lesson_8</span>
+					<ul>
+						<li><a href="#">task_1</a></li>
+					</ul>
+				</li>
+				<li><span class="num">lesson_9</span>
+					<ul>
+						<li><a href="#">task_1</a></li>
+					</ul>
+				</li>
+<!-- 				<li><span class="num">lesson_10</span>
+					<ul>
+						<li><a href="#">task_1</a></li>
+						<li><a href="#">task_2</a></li>
+						<li><a href="#">task_3</a></li>
+					</ul>
+				</li>
+				<li><span class="num">lesson_11</span>
 					<ul>
 						<li><a href="#">task_1</a></li>
 						<li><a href="#">task_2</a></li>
