--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 				</li>
 				<li><span class="num">lesson_8</span>
 					<ul>
-						<li><a href="#">task_1</a></li>
+						<li><a href="task_8_doc_ua_src/index.html">task_1</a></li>
 					</ul>
 				</li>
 				<li><span class="num">lesson_9</span>
 					<ul>
-						<li><a href="#">task_1</a></li>
+						<li><a href="task_9_colesov/index.html">task_1</a></li>
 					</ul>
 				</li>
 <!-- 				<li><span class="num">lesson_10</span>
