--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
 						<li><a href="task_9_colesov/index.html">task_1</a></li>
 					</ul>
 				</li>
+				<li><span class="num">project</span>
+					<ul>
+						<li><a href="landingpage_01/index.html">task</a></li>
+					</ul>
+				</li>
 <!-- 				<li><span class="num">lesson_10</span>
 					<ul>
 						<li><a href="#">task_1</a></li>
