--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 				</li>
 				<li><span class="num">project</span>
 					<ul>
-						<li><a href="landingpage_01/index.html">task</a></li>
+						<li><a href="landingpage_01/index.html">EasyCourse</a></li>
 					</ul>
 				</li>
 <!-- 				<li><span class="num">lesson_10</span>
