--- a/landingpage_01/index.html
+++ b/landingpage_01/index.html
@@ -19,7 +19,7 @@
 
 
 	<!-- for fixed menu -->
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<!-- 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script> -->
 	<!-- end  for fixed menu-->
 
 
