--- a/landingpage_01/course.html
+++ b/landingpage_01/course.html
@@ -42,7 +42,7 @@
 
  	<nav class="navbar navbar-expand-md navbar-dark fixed-top" >
 		<div class="logo">
-				<a class="logo_fixed" href="#"><img src="img/logo_v2_2.png"></a>
+				<a class="logo_fixed" href="index.html"><img src="img/logo_v2_2.png"></a>
 		</div>
 
 		<button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
@@ -53,7 +53,7 @@
 
 			<ul class="navbar-nav">
 				<li class="nav-item">
-					<a class="nav-link" href="#">Головна</a>
+					<a class="nav-link" href="index.html">Головна</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="index.html#courses">Курси</a>
