--- a/landingpage_01/index.html
+++ b/landingpage_01/index.html
@@ -237,7 +237,7 @@
 								<h3>Scratch</h3>
 								<p>Найлегше знайомство з програмуванням та електронікою. Підходить для школярів та їх батьків і вчителів.</p>
 								<p>Автор курсу – вчитель інформатики Політехнічного ліцею НТУУ “КПІ” Людмила Вікторівна Булигіна.</p>
-								<div class="button"><a href="#">дізнатися більше</a></div>
+								<div class="button"><a href="course.html">дізнатися більше</a></div>
 							</div>
 						</div>
 
@@ -257,7 +257,7 @@
 									cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 									proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 								</p>
-								<div class="button"><a href="#">дізнатися більше</a></div>
+								<div class="button"><a href="course.html">дізнатися більше</a></div>
 							</div>
 						</div>
 
@@ -270,7 +270,7 @@
 								<h3>Scratch</h3>
 								<p>Найлегше знайомство з програмуванням та електронікою. Підходить для школярів та їх батьків і вчителів.</p>
 								<p>Автор курсу – вчитель інформатики Політехнічного ліцею НТУУ “КПІ” Людмила Вікторівна Булигіна.</p>
-								<div class="button"><a href="#">дізнатися більше</a></div>
+								<div class="button"><a href="course.html">дізнатися більше</a></div>
 							</div>
 						</div>
 
@@ -283,7 +283,7 @@
 								<h3>Scratch</h3>
 								<p>Найлегше знайомство з програмуванням та електронікою. Підходить для школярів та їх батьків і вчителів.</p>
 								<p>Автор курсу – вчитель інформатики Політехнічного ліцею НТУУ “КПІ” Людмила Вікторівна Булигіна.</p>
-								<div class="button"><a href="#">дізнатися більше</a></div>
+								<div class="button"><a href="course.html">дізнатися більше</a></div>
 							</div>
 						</div>
 
@@ -295,7 +295,7 @@
 								<h3>Scratch</h3>
 								<p>Найлегше знайомство з програмуванням та електронікою. Підходить для школярів та їх батьків і вчителів.</p>
 								<p>Автор курсу – вчитель інформатики Політехнічного ліцею НТУУ “КПІ” Людмила Вікторівна Булигіна.</p>
-								<div class="button"><a href="#">дізнатися більше</a></div>
+								<div class="button"><a href="course.html">дізнатися більше</a></div>
 							</div>
 						</div>
 					</div>
