--- a/landingpage_01/loginRegistr.html
+++ b/landingpage_01/loginRegistr.html
@@ -18,7 +18,7 @@
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark" >
 			<div class="logo">
-					<a class="logo_fixed" href="#"><img src="img/logo_v2_2.png"></a>
+					<a class="logo_fixed" href="index.html"><img src="img/logo_v2_2.png"></a>
 			</div>
 
 			<button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
@@ -29,10 +29,10 @@
 
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" href="#">Головна</a>
+						<a class="nav-link" href="index.html">Головна</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Курси</a>
+						<a class="nav-link" href="index.html#courses">Курси</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="#">Блог</a>
