--- a/landingpage_01/index.html
+++ b/landingpage_01/index.html
@@ -47,13 +47,13 @@
 									<a class="nav-link" href="#">Головна</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" data-value="courses" href="#">Курси</a>
+									<a class="nav-link move" data-value="courses" href="#">Курси</a>
 								</li>
 								<li class="nav-item">
 									<a class="nav-link" href="#">Блог</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link" data-value="contact" href="#">Контакти</a>
+									<a class="nav-link move" data-value="contact" href="#">Контакти</a>
 								</li>
 								<li class="nav-item hide_search">
 									<a class="nav-link" href="#" onclick="focusMethod()" ><i class="fas fa-search"></i></a>
