--- a/landingpage_01/index.html
+++ b/landingpage_01/index.html
@@ -104,7 +104,7 @@
 						<div class="service service_three">
 							<div class="fig_03 fig"></div>
 							<div class="step">
-							<p><span class="step_header">Форум</span><span class="visible">Обговорюйте питання, що Вас цікавлять, з іншими студентами та викладачами на форумі.</span></p>
+							<p><span class="step_header">Форум</span><span class="visible">Обговорюйте питання, що Вас цікавлять, на форумі.</span></p>
 							</div>
 						</div>
 												
@@ -231,12 +231,12 @@
 					<div class="block_flex">
 						<div class="course clearfix">
 							<div class="course_img">
-								<img src="img/scratch-to-main_page.jpg" alt="">
+								<img src="img/web_UI.png" alt="">
 							</div>	
 							<div class="course_describe">
-								<h3>Scratch</h3>
-								<p>Найлегше знайомство з програмуванням та електронікою. Підходить для школярів та їх батьків і вчителів.</p>
-								<p>Автор курсу – вчитель інформатики Політехнічного ліцею НТУУ “КПІ” Людмила Вікторівна Булигіна.</p>
+								<h3>Основи Web UI розробки</h3>
+								<p>Дізнайтеся про основу створення веб сайтів та вивчіть базові інструменти веб-розробки: HTML/CSS/Javascript.</p>
+								<p>Курс читає Світлана, Web UI девелопер в компанії N-iX.</p>
 								<div class="button"><a href="course.html">дізнатися більше</a></div>
 							</div>
 						</div>
@@ -247,15 +247,10 @@
 								<img src="img/web_UI.png" alt="">
 							</div>
 							<div class="course_describe">
-								<h3>Scratch</h3>
-								<p>Найлегше знайомство з програмуванням та електронікою. Підходить для школярів та їх батьків і вчителів.</p>
-								<p>Автор курсу – вчитель інформатики Політехнічного ліцею НТУУ “КПІ” Людмила Вікторівна Булигіна.
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-									tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-									quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-									consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-									cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-									proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+								<h3>Основи Web UI розробки</h3>
+								<p>Дізнайтеся про основу створення веб сайтів та вивчіть базові інструменти веб-розробки: HTML/CSS/Javascript.</p>
+								<p>Курс читає Світлана, Web UI девелопер в компанії N-iX.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 								</p>
 								<div class="button"><a href="course.html">дізнатися більше</a></div>
 							</div>
@@ -264,12 +259,12 @@
 
 							<div class="course clearfix">
 							<div class="course_img">
-								<img src="img/scratch-to-main_page.jpg" alt="">
+								<img src="img/web_UI.png" alt="">
 							</div>	
 							<div class="course_describe">
-								<h3>Scratch</h3>
-								<p>Найлегше знайомство з програмуванням та електронікою. Підходить для школярів та їх батьків і вчителів.</p>
-								<p>Автор курсу – вчитель інформатики Політехнічного ліцею НТУУ “КПІ” Людмила Вікторівна Булигіна.</p>
+								<h3>Основи Web UI розробки</h3>
+								<p>Дізнайтеся про основу створення веб сайтів та вивчіть базові інструменти веб-розробки: HTML/CSS/Javascript.</p>
+								<p>Курс читає Світлана, Web UI девелопер в компанії N-iX.</p>
 								<div class="button"><a href="course.html">дізнатися більше</a></div>
 							</div>
 						</div>
@@ -280,9 +275,9 @@
 								<img src="img/web_UI.png" alt="">
 							</div>
 							<div class="course_describe">
-								<h3>Scratch</h3>
-								<p>Найлегше знайомство з програмуванням та електронікою. Підходить для школярів та їх батьків і вчителів.</p>
-								<p>Автор курсу – вчитель інформатики Політехнічного ліцею НТУУ “КПІ” Людмила Вікторівна Булигіна.</p>
+								<h3>Основи Web UI розробки</h3>
+								<p>Дізнайтеся про основу створення веб сайтів та вивчіть базові інструменти веб-розробки: HTML/CSS/Javascript.</p>
+								<p>Курс читає Світлана, Web UI девелопер в компанії N-iX.</p>
 								<div class="button"><a href="course.html">дізнатися більше</a></div>
 							</div>
 						</div>
@@ -292,9 +287,9 @@
 								<img src="img/web_UI.png" alt="">
 							</div>
 							<div class="course_describe">
-								<h3>Scratch</h3>
-								<p>Найлегше знайомство з програмуванням та електронікою. Підходить для школярів та їх батьків і вчителів.</p>
-								<p>Автор курсу – вчитель інформатики Політехнічного ліцею НТУУ “КПІ” Людмила Вікторівна Булигіна.</p>
+								<h3>Основи Web UI розробки</h3>
+								<p>Дізнайтеся про основу створення веб сайтів та вивчіть базові інструменти веб-розробки: HTML/CSS/Javascript.</p>
+								<p>Курс читає Світлана, Web UI девелопер в компанії N-iX.</p>
 								<div class="button"><a href="course.html">дізнатися більше</a></div>
 							</div>
 						</div>
