--- a/landingpage_01/course.html
+++ b/landingpage_01/course.html
@@ -110,7 +110,7 @@
 							<h2>Викладач курсу</h2>
 						</div>
 						<div class="col-lg-3 col-md-3 col-sm-12">
-							<img src="img/photo_1.jpg" alt="">
+							<img class="photo_teacher" src="img/photo_1.jpg" alt="">
 						</div>
 						<div class="col-lg-9 col-md-9 col-sm-12">
 							<h3>Світлана</h3>
