--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
 						<li><a href="task_9_colesov/index.html">task_1</a></li>
 					</ul>
 				</li>
+				<li><span class="num">lesson_12</span>
+					<ul>
+						<li><a href="task_12_all/index.html">task_1</a></li>
+					</ul>
+				</li> 
 				<li><span class="num">project</span>
 					<ul>
 						<li><a href="landingpage_01/index.html">EasyCourse</a></li>
@@ -80,14 +85,8 @@
 						<li><a href="#">task_2</a></li>
 						<li><a href="#">task_3</a></li>
 					</ul>
-				</li>
-				<li><span class="num">lesson_11</span>
-					<ul>
-						<li><a href="#">task_1</a></li>
-						<li><a href="#">task_2</a></li>
-						<li><a href="#">task_3</a></li>
-					</ul>
-				</li> -->
+				</li>-->
+				
 			</ul>
 		</main>
 		<footer class="footer">
