--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 						<li><a href="task_12_all/index.html">task_1</a></li>
 					</ul>
 				</li> 
-				<li><span class="num">project</span>
+<!-- 				<li><span class="num">project</span>
 					<ul>
 						<li><a href="landingpage_01/index.html">EasyCourse</a></li>
 					</ul>
-				</li>
+				</li> -->
 <!-- 				<li><span class="num">lesson_10</span>
 					<ul>
 						<li><a href="#">task_1</a></li>
