--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
 						<li><a href="task_9_colesov/index.html">task_1</a></li>
 					</ul>
 				</li>
-<!-- 				<li><span class="num">lesson_12</span>
+				<li><span class="num">lesson_12</span>
 					<ul>
 						<li><a href="task_12_all/index.html">task_1</a></li>
 					</ul>
-				</li>  -->
-<!-- 				<li><span class="num">project</span>
+				</li> 
+				<li><span class="num">project</span>
 					<ul>
 						<li><a href="landingpage_01/index.html">EasyCourse</a></li>
 					</ul>
-				</li> -->
+				</li>
 <!-- 				<li><span class="num">lesson_10</span>
 					<ul>
 						<li><a href="#">task_1</a></li>
