--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
 						<li><a href="landingpage_01/index.html">EasyCourse</a></li>
 					</ul>
 				</li>
+				<li><span class="num">project</span>
+					<ul>
+						<li><a href="landingpage_02/index.html">EasyCourse_02</a></li>
+					</ul>
+				</li>
 <!-- 				<li><span class="num">lesson_10</span>
 					<ul>
 						<li><a href="#">task_1</a></li>
