--- a/landingpage_02/index.html
+++ b/landingpage_02/index.html
@@ -14,9 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 
-	<!-- for fixed menu -->
-	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-	<!-- end  for fixed menu-->
+	
 
 
 
@@ -378,6 +376,11 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	<!-- end_sdn_bootstrap -->
+
+	<!-- for fixed menu -->
+	<!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script> -->
+	<!-- end  for fixed menu-->
+	
 	<script src="js/script.js"></script>
 
 
