--- a/landingpage_02/index.html
+++ b/landingpage_02/index.html
@@ -14,7 +14,12 @@
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
-
+	<script>
+	 $(document).ready(function(){	
+		// for first scrin
+		$('.header').height($(window).height());
+	 });
+	</script>
 	
 
 
