--- a/landingpage_02/index.html
+++ b/landingpage_02/index.html
@@ -14,12 +14,13 @@
 
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
-	<script>
+	<!-- <script>
 	 $(document).ready(function(){	
 		// for first scrin
-		$('.header').height($(window).height());
+		// $('.header').height($(window).height());
+		$(".header").css("height", $(window).height());
 	 });
-	</script>
+	</script> -->
 	
 
 
@@ -389,8 +390,8 @@
 	<!-- <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script> -->
 	<!-- end  for fixed menu-->
 
-	<script src="js/script.js"></script>
 
+	<script src="js/script.js"></script>
 
 
 
