--- a/landingpage_01/loginRegistr.html
+++ b/landingpage_01/loginRegistr.html
@@ -3,7 +3,8 @@
 <head>
 	<title>LoginRegistr</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1"> 
+
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -13,7 +14,9 @@
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark" >
 			<div class="logo">
-					<a class="logo_fixed" href="index.html"><img src="img/logo_v2_2.png"></a>
+					<a class="logo_fixed" href="index.html">
+						<img src="img/logo_v2_2.png" alt="">
+					</a>
 			</div>
 
 			<button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
@@ -102,8 +105,8 @@
 			</div>
 		</div>
 	</main>
-	<script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script src="js/jquery-3.3.1.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 </html>
