--- a/landingpage_01/index.html
+++ b/landingpage_01/index.html
@@ -5,6 +5,25 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="description" content="EasyCourse - безкоштовна платформа відкритих інтерактивних онлайн-курсів">
+
+		<link rel="apple-touch-icon" sizes="57x57" href="imgf/apple-icon-57x57.png">
+		<link rel="apple-touch-icon" sizes="60x60" href="imgf/apple-icon-60x60.png">
+		<link rel="apple-touch-icon" sizes="72x72" href="imgf/apple-icon-72x72.png">
+		<link rel="apple-touch-icon" sizes="76x76" href="imgf/apple-icon-76x76.png">
+		<link rel="apple-touch-icon" sizes="114x114" href="imgf/apple-icon-114x114.png">
+		<link rel="apple-touch-icon" sizes="120x120" href="imgf/apple-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="144x144" href="imgf/apple-icon-144x144.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="imgf/apple-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="imgf/apple-icon-180x180.png">
+		<link rel="icon" type="image/png" sizes="192x192"  href="imgf/android-icon-192x192.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="imgf/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="imgf/favicon-96x96.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="imgf/favicon-16x16.png">
+		<link rel="manifest" href="imgf/manifest.json">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="msapplication-TileImage" content="imgf/ms-icon-144x144.png">
+		<meta name="theme-color" content="#ffffff">
+
 		
 		<link rel="stylesheet" type="text/css" href="css/normalize.css">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -53,7 +72,7 @@
 							</div>
 						</nav>
 					</div>	
-					<form action="" id="search" class="searchbox">
+					<form id="search" class="searchbox">
 		 				<input id="myTextField" type="text" name="search" placeholder="Search..">
 		 				<button type="submit"></button>
 		 			</form>
