--- a/landingpage_01/index.html
+++ b/landingpage_01/index.html
@@ -72,7 +72,7 @@
 							</div>
 						</nav>
 					</div>	
-					<form id="search" class="searchbox">
+					<form action="#" id="search" class="searchbox">
 		 				<input id="myTextField" type="text" name="search" placeholder="Search..">
 		 				<button type="submit"></button>
 		 			</form>
