--- a/landingpage_01/index.html
+++ b/landingpage_01/index.html
@@ -39,8 +39,8 @@
 					<div class="default" id="menu" >
 						<nav class="navbar navbar-expand-md navbar-dark">
 							<div class="logo">
-									<a class="logo_fixed" href="index.html"><img src="img/logo_v2_2.png" alt=""></a>
-									<a class="logo_default" href="index.html"><img src="img/logo.png" alt=""></a>
+									<a class="logo_fixed" href="index.html"><img src="img/logo_v2_2.png" alt="logo"></a>
+									<a class="logo_default" href="index.html"><img src="img/logo.png" alt="logo"></a>
 							</div>
 
 							<button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target">
@@ -214,7 +214,7 @@
 							<div class="button"><a href="#">Хочу вивчити</a></div>
 						</div>
 						<div class="photo_block">
-							<img src="img/learn.png" alt="">
+							<img src="img/learn.png" alt="learn">
 						</div>
 					</div>
 				</div>
@@ -222,7 +222,7 @@
 				<div class="teach">
 					<div class="my_container clearfix">
 						<div class="photo_block">
-							<img src="img/teach.png" alt="">
+							<img src="img/teach.png" alt="teach">
 						</div>
 						<div class="aim">
 							<p>Почати викладати</p>
@@ -238,7 +238,7 @@
 						<div class="block_flex">
 							<div class="course clearfix">
 								<div class="course_img">
-									<img src="img/web_UI.png" alt="">
+									<img src="img/web_UI.png" alt="cource-img">
 								</div>	
 								<div class="course_describe">
 									<h3>Основи Web UI розробки</h3>
@@ -251,7 +251,7 @@
 
 							<div class="course clearfix">
 								<div class="course_img">
-									<img src="img/web_UI.png" alt="">
+									<img src="img/web_UI.png" alt="cource-img">
 								</div>
 								<div class="course_describe">
 									<h3>Основи Web UI розробки</h3>
@@ -266,7 +266,7 @@
 
 								<div class="course clearfix">
 								<div class="course_img">
-									<img src="img/web_UI.png" alt="">
+									<img src="img/web_UI.png" alt="cource-img">
 								</div>	
 								<div class="course_describe">
 									<h3>Основи Web UI розробки</h3>
@@ -279,7 +279,7 @@
 
 							<div class="course clearfix">
 								<div class="course_img">
-									<img src="img/web_UI.png" alt="">
+									<img src="img/web_UI.png" alt="cource-img">
 								</div>
 								<div class="course_describe">
 									<h3>Основи Web UI розробки</h3>
@@ -291,7 +291,7 @@
 
 							<div class="course clearfix">
 								<div class="course_img">
-									<img src="img/web_UI.png" alt="">
+									<img src="img/web_UI.png" alt="cource-img">
 								</div>
 								<div class="course_describe">
 									<h3>Основи Web UI розробки</h3>
@@ -368,7 +368,7 @@
 							</p>
 						</div>
 						<div class="logo">
-							<a href="index.html"><img src="img/logo.png" alt=""></a>
+							<a href="index.html"><img src="img/logo.png" alt="logo"></a>
 						</div>
 						<div>
 							<p>
