--- a/landingpage_01/course.html
+++ b/landingpage_01/course.html
@@ -209,9 +209,9 @@
 		</div>
 	</footer>
 
-	<script src="js/jquery-3.3.1.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/script.js"></script>
+	<script src="js/jquery-3.3.1.min.js" defer></script>
+	<script src="js/bootstrap.min.js" defer></script>
+	<script src="js/script.js" defer></script>
 	</body>
 
 </html>
