--- a/landingpage_01/index.html
+++ b/landingpage_01/index.html
@@ -57,7 +57,7 @@
 										<a class="nav-link move" data-value="courses" href="#">Курси</a>
 									</li>
 									<li class="nav-item">
-										<a class="nav-link" href="#">Блог</a>
+										<a class="nav-link" href="404.html">Блог</a>
 									</li>
 									<li class="nav-item">
 										<a class="nav-link move" data-value="contact" href="#">Контакти</a>
@@ -383,8 +383,8 @@
 			</footer>
 		</div>
 
-		<script src="js/jquery-3.3.1.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/script.js"></script>
+	<script src="js/jquery-3.3.1.min.js" defer></script>
+	<script src="js/bootstrap.min.js" defer></script>
+	<script src="js/script.js" defer></script>
 	</body>
 </html>
