--- a/landingpage_01/404.html
+++ b/landingpage_01/404.html
@@ -39,8 +39,8 @@
 	</nav>
 	<main>
 		<div class="container text-center mt-5">
-			<img  src="img/404.png" alt="404" width="600">
-			<p class="h1 font-weight-bold mt-4">Sorry, the page not found</p>
+			<img class="fluid" src="img/404.png" alt="404" width="200">
+			<p class="text-uppercase font-weight-bold mt-4">Sorry, the page not found</p>
 		</div>
 	</main>	
 	<script src="js/jquery-3.3.1.min.js"></script>
