--- a/landingpage_01/loginRegistr.html
+++ b/landingpage_01/loginRegistr.html
@@ -33,7 +33,7 @@
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark" >
 			<div class="logo">
-					<a class="logo_fixed" href="index.html">
+					<a class="logo_fixed" href="https://zaleim.github.io/landingpage_01/index.html">
 						<img src="img/logo_v2_2.png" alt="">
 					</a>
 			</div>
