--- a/landingpage_01/loginRegistr.html
+++ b/landingpage_01/loginRegistr.html
@@ -33,7 +33,7 @@
 <body>
 	<nav class="navbar navbar-expand-md navbar-dark" >
 			<div class="logo">
-					<a class="logo_fixed" href="https://zaleim.github.io/landingpage_01/index.html">
+					<a class="logo_fixed" href="index.html">
 						<img src="img/logo_v2_2.png" alt="">
 					</a>
 			</div>
@@ -85,7 +85,7 @@
 
 			<div class="forms" id="forms">
 				
-				<form class="login-form login-button-active" action="index.html" method="post" data-action="animated">
+				<form class="login-form login-button-active" action="https://zaleim.github.io/landingpage_01/index.html" method="post" data-action="animated">
 					<fieldset>
 						<legend>Please, enter your email and password for login.</legend>
 						<p>
