--- a/landingpage_01/loginRegistr.html
+++ b/landingpage_01/loginRegistr.html
@@ -85,7 +85,7 @@
 
 			<div class="forms" id="forms">
 				
-				<form class="login-form login-button-active" action="https://zaleim.github.io/landingpage_01/index.html" method="post" data-action="animated">
+				<form class="login-form login-button-active" action="index.html" data-action="animated">
 					<fieldset>
 						<legend>Please, enter your email and password for login.</legend>
 						<p>
