--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		</header>
 		<main>
 			<ul class="lesson">
-				<li><span class="num">lesson_1</span>
+<!-- 				<li><span class="num">lesson_1</span>
 					<ul>
 						<li><a href="task_1/index.html">task_1</a></li>
 					</ul>
@@ -73,7 +73,7 @@
 					<ul>
 						<li><a href="task_12_all/index.html">task_1</a></li>
 					</ul>
-				</li> 
+				</li>  -->
 				<li><span class="num">project</span>
 					<ul>
 						<li><a href="landingpage_01/index.html">EasyCourse</a></li>
