--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 	<div class="fullwrap"> 
 		<header>
-			<div class="wow"><p>wow theachers homework</p></div>
+<!-- 			<div class="wow"><p>wow theachers homework</p></div> -->
 		</header>
 		<main>
 			<ul class="lesson">
