--- a/landingpage_01/index.html
+++ b/landingpage_01/index.html
@@ -211,7 +211,7 @@
 					<div class="my_container clearfix">
 						<div class="aim">
 							<p>Почати вчитися</p>
-							<div class="button"><a href="#">Хочу вивчити</a></div>
+							<div class="button"><a href="loginRegistr.html">Хочу вивчити</a></div>
 						</div>
 						<div class="photo_block">
 							<img src="img/learn.png" alt="learn">
@@ -226,7 +226,7 @@
 						</div>
 						<div class="aim">
 							<p>Почати викладати</p>
-							<div class="button"><a href="#">Хочу викладати </a></div>
+							<div class="button"><a href="loginRegistr.html">Хочу викладати </a></div>
 						</div>
 					</div>
 				</div>
